--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,28 +1,45 @@
 .App {
+  margin-top: 15%;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+#startTimer {
+  border-radius: 20px;
+  background: #3493ce;
   color: white;
+  border: none;
+  padding: 25px 80px;
+  display: inline-block;
+  margin: 15px 30px;
+  cursor: pointer;
+  outline: none;
 }
 
-.App-title {
-  font-size: 1.5em;
+#startTimer:active {
+  top: 3px;
+  left: 2px;
 }
 
-.App-intro {
-  font-size: large;
+body, html{
+  margin:0;
+  padding:0;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#modal{
+  width: 100px;
+  height: 100px;
+  border: 1px;
+}
+
+.timeDiv {
+  font-size: 70px;
+}
+
+input {
+  height: 50px;
+  border-radius: 5px;
+  float: left;
+  margin-left: 50px;
+  margin-top: 40px;
+  font-size: 40px;
 }
