--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -35,11 +35,36 @@ body, html{
   font-size: 70px;
 }
 
+#OptionsModal {
+  margin-left: 20%;
+}
+
 input {
   height: 50px;
-  border-radius: 5px;
   float: left;
-  margin-left: 50px;
   margin-top: 40px;
-  font-size: 40px;
+  font-size: 30px;
+  margin-left: 5px;
+  border-bottom: 1px solid white;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  width: 60px;
+  padding-bottom: 0px;
+  text-align: center;
+  background: none;
+  color: white;
 }
+
+.dot-separator{
+  background: none;
+  border: none;
+  width: 5px;
+  font-weight: 800;
+}
+
+input:focus {
+  outline-width: 0;
+  caret-color: white;
+}
+
