Added SASS + font awesome.
-Fixed number formatting issue by changing onBlur to onChange.
-Cleaned up some stylings.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,50 +1,68 @@
-.hidden {
-  display: none; }
+$button-blue: #3493ce;
+$hover-blue: #2b7daf;
 
-.inline-block, #startTimer, .input-time {
-  display: inline-block; }
+.hidden {
+  display: none;
+}
+
+.inline-block {
+  display: inline-block;
+}
 
 .App {
   margin-top: 15%;
-  text-align: center; }
+  text-align: center;
+}
 
 #startTimer {
   border-radius: 20px;
-  background: #3493ce;
+  background: $button-blue;
   color: white;
   border: none;
   padding: 20px 60px;
+  @extend .inline-block;
   margin: 15px 30px;
   cursor: pointer;
   outline: none;
-  font-size: 20pt; }
-  #startTimer:active {
+  font-size: 20pt;
+
+  &:active {
     top: 3px;
-    left: 2px; }
-  #startTimer:hover {
+    left: 2px;
+  }
+
+  &:hover {
     cursor: pointer;
-    background: #2b7daf; }
+    background: $hover-blue;
+  }
+}
 
 #openNav {
-  margin-top: 20px; }
-  #openNav:hover {
+  margin-top: 20px;
+  &:hover {
     cursor: pointer;
-    color: #3493ce; }
+    color: $button-blue;
+  }
+}
 
-body, html {
-  margin: 0;
-  padding: 0; }
+body, html{
+  margin:0;
+  padding:0;
+}
 
-#modal {
+#modal{
   width: 100px;
   height: 100px;
-  border: 1px; }
+  border: 1px;
+}
 
 .time {
-  font-size: 70px; }
+  font-size: 70px;
+}
 
 #OptionsModal {
-  margin-left: 20%; }
+  margin-left: 20%;
+}
 
 input {
   height: 50px;
@@ -60,17 +78,28 @@ input {
   padding-bottom: 0px;
   text-align: center;
   background: none;
-  color: white; }
+  color: white;
+}
 
-.dot-separator {
+.dot-separator{
   background: none;
   border: none;
   width: 5px;
-  font-weight: 800; }
+  font-weight: 800;
+}
 
-input:focus {
-  outline-width: 0;
-  caret-color: white; }
+input {
+  &:focus {
+    outline-width: 0;
+    caret-color: white;
+  }
+}
+
 
 .fa-gear {
-  margin-right: 5px; }
+  margin-right: 5px;
+}
+
+.input-time {
+  @extend .inline-block;
+}
