--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -81,6 +81,10 @@ body, html{
   padding:0;
 }
 
+#background {
+  background: url('lake.jpg');
+  background-repeat: no-repeat;
+}
 #modal{
   width: 100px;
   height: 100px;
@@ -133,4 +137,11 @@ input {
 
 .input-time {
   @extend .inline-block;
+}
+
+.disabled-btn {
+  @extend .timer-btn;
+  color: #c5c8cc;
+  background: #e0e2e5;
+  cursor: not-allowed !important;
 }
