--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -103,3 +103,6 @@ input:focus {
   color: #c5c8cc;
   background: #e0e2e5;
   cursor: not-allowed !important; }
+
+.small-text {
+  font-size: 16pt; }
