--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,30 @@
+.gradient-background, html {
+  background: #141E30;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #243B55, #141E30);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #243B55, #141E30);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+
+body {
+  color: white; }
+
 .hidden {
   display: none; }
 
-.inline-block, .timer-btn, .gray-btn, .disabled-btn, .input-time {
+.inline-block, .timer-btn, .disabled-btn, .input-time {
   display: inline-block; }
 
 .App {
-  margin-top: 15%;
+  padding-top: 30vh;
+  text-align: center;
+  height: 100vh; }
+
+.App-start {
+  margin-top: 30vh;
   text-align: center; }
 
-.timer-btn, .gray-btn, .disabled-btn {
+.timer-btn, .disabled-btn {
   border-radius: 20px;
   color: white;
   border: none;
@@ -16,34 +32,36 @@
   margin: 15px 30px;
   cursor: pointer;
   outline: none;
-  font-size: 20pt; }
-  .timer-btn:active, .gray-btn:active, .disabled-btn:active {
+  font-size: 20pt;
+  background: none; }
+  .timer-btn:active, .disabled-btn:active {
     top: 3px;
     left: 2px; }
 
 .primary-btn {
-  background: #3493ce; }
+  color: #93DFB8; }
   .primary-btn:hover {
     cursor: pointer;
-    background: #2b7daf; }
+    text-decoration: underline; }
 
 .orange-btn {
-  background: #f4a742; }
+  color: orange; }
   .orange-btn:hover {
     cursor: pointer;
-    background: #db963b; }
+    text-decoration: underline; }
 
 .red-btn {
-  background: red; }
+  color: #FF355E; }
   .red-btn:hover {
     cursor: pointer;
-    background: darkred; }
+    text-decoration: underline; }
 
 .gray-btn {
-  background: gray; }
+  background: none;
+  color: white; }
   .gray-btn:hover {
     cursor: pointer;
-    background: darkgray; }
+    text-decoration: underline; }
 
 #handleOpenNav {
   margin-top: 20px; }
@@ -65,7 +83,12 @@ body, html {
   border: 1px; }
 
 .time {
-  font-size: 70px; }
+  font-size: 70px;
+  margin-top: -100px;
+  padding-top: 100px; }
+
+.padding-200px {
+  padding-bottom: 200px; }
 
 #OptionsModal {
   margin-left: 20%; }
@@ -101,8 +124,125 @@ input:focus {
 
 .disabled-btn {
   color: #c5c8cc;
-  background: #e0e2e5;
   cursor: not-allowed !important; }
 
 .small-text {
   font-size: 16pt; }
+
+html {
+  width: 100%;
+  height: 100%;
+  background-color: #080808; }
+
+ul {
+  height: 100%;
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  position: fixed;
+  top: -20vh;
+  left: -4vw;
+  pointer-events: none; }
+
+li {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  display: block;
+  background: transparent;
+  border: 3px solid #17f6fb;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  border-radius: 500px;
+  transition: all 0.5s ease; }
+
+li:first-child {
+  margin-left: -130px;
+  margin-top: -130px;
+  z-index: 2;
+  width: 340px;
+  height: 340px;
+  border-width: 5px;
+  animation: spinBG 5s infinite linear; }
+
+li:nth-child(2) {
+  margin-left: -137px;
+  margin-top: -137px;
+  z-index: 1;
+  width: 370px;
+  height: 370px;
+  border-width: 1px;
+  border-style: solid;
+  box-shadow: 0px 0px 20px rgba(23, 246, 251, 0.5);
+  animation: spinBG2 2s infinite linear; }
+
+li:nth-child(3) {
+  margin-left: -150px;
+  margin-top: -150px;
+  z-index: 1;
+  width: 396px;
+  height: 396px;
+  border-width: 2px;
+  box-shadow: inset 0px 0px 25px rgba(23, 246, 251, 0.25);
+  animation: spinBG 12s infinite linear; }
+
+li:nth-child(4) {
+  margin-left: -170px;
+  margin-top: -170px;
+  z-index: 1;
+  width: 430px;
+  height: 430px;
+  border-width: 5px;
+  border-style: solid;
+  box-shadow: inset 0px 0px 25px #17f6fb;
+  animation: spinBG3 8s infinite linear; }
+
+/*-------------------------------------------
+ Animations
+-------------------------------------------*/
+@keyframes pulseGlow {
+  0% {
+    text-shadow: 0px 0px 20px rgba(23, 246, 251, 0.75); }
+  50% {
+    text-shadow: 0px 0px 40px rgba(23, 246, 251, 0.5); }
+  100% {
+    text-shadow: 0px 0px 20px rgba(23, 246, 251, 0.75); } }
+
+@keyframes pulseShadow {
+  0% {
+    box-shadow: 0px 0px 30px rgba(23, 246, 251, 0.25); }
+  50% {
+    box-shadow: 0px 0px 30px rgba(23, 246, 251, 0.75); }
+  100% {
+    box-shadow: 0px 0px 30px rgba(23, 246, 251, 0.25); } }
+
+@keyframes spinBG {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+
+@keyframes spinBG2 {
+  0% {
+    transform: rotate(360deg);
+    box-shadow: 0px 0px 1px rgba(23, 246, 251, 0.5); }
+  50% {
+    transform: rotate(180deg);
+    box-shadow: 0px 0px 20px rgba(23, 246, 251, 0.5); }
+  100% {
+    transform: rotate(0deg);
+    box-shadow: 0px 0px 1px rgba(23, 246, 251, 0.5); } }
+
+@keyframes spinBG3 {
+  0% {
+    transform: rotate(180deg);
+    box-shadow: 0px 0px 1px rgba(23, 246, 251, 0.1); }
+  50% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(-180deg); } }
+
+#break-countdown {
+  margin-top: -200px;
+  font-size: 70px;
+  margin-top: -100px; }
