--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -52,6 +52,11 @@ body {
     top: 3px;
     left: 2px;
   }
+
+  @media screen and (max-width: 500px) {
+    font-size: 12pt;
+    margin-top: -10%;
+  }
 }
 
 .primary-btn {
@@ -116,6 +121,9 @@ body, html{
   font-size: 70px;
   margin-top: -100px;
   padding-top: 100px;
+  @media screen and (max-width: 500px) {
+      font-size: 30pt;
+    }
 }
 
 .padding-200px {
@@ -191,6 +199,14 @@ ul{
   top: -20vh;
   left: -4vw;
   pointer-events: none;
+
+  @media screen and (max-width: 1200px) {
+    left: -6vw;
+  }
+
+  @media screen and (max-width: 768px) {
+    left: -8vw;
+  }
 }
 
 li{
@@ -203,7 +219,8 @@ li{
 	border-left-color: transparent;
 	border-right-color: transparent;
 	border-radius: 500px;
-	transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  
 }
 
 li:first-child{
@@ -213,7 +230,13 @@ li:first-child{
 	width: 340px;
 	height: 340px;
 	border-width: 5px;
-	animation: spinBG 5s infinite linear;
+  animation: spinBG 5s infinite linear;
+  @media screen and (max-width: 500px) {
+    width: 220px;
+    height: 220px;
+    margin-left: -100px;
+    margin-top: -100px;
+  }
 }
 
 li:nth-child(2){
@@ -225,7 +248,13 @@ li:nth-child(2){
 	border-width: 1px;
 	border-style: solid;
 	box-shadow: 0px 0px 20px rgba(23,246,251, .5);
-	animation: spinBG2 2s infinite linear;
+  animation: spinBG2 2s infinite linear;
+  @media screen and (max-width: 500px) {
+    width: 270px;
+    height: 270px;
+    margin-left: -120px;
+    margin-top: -120px;
+  }
 }
 
 li:nth-child(3){
@@ -236,7 +265,13 @@ li:nth-child(3){
 	height: 396px;
 	border-width: 2px;
 	box-shadow: inset 0px 0px 25px rgba(23,246,251, .25);
-	animation: spinBG 12s infinite linear;
+  animation: spinBG 12s infinite linear;
+  @media screen and (max-width: 500px) {
+    width: 305px;
+    height: 305px;
+    margin-left: -140px;
+    margin-top: -140px;
+  }
 }
 
 li:nth-child(4){
@@ -248,7 +283,13 @@ li:nth-child(4){
 	border-width: 5px;
 	border-style: solid;
 	box-shadow: inset 0px 0px 25px rgba(23,246,251,1.0);
-	animation: spinBG3 8s infinite linear;
+  animation: spinBG3 8s infinite linear;
+  @media screen and (max-width: 500px) {
+    width: 325px;
+    height: 325px;
+    margin-left: -150px;
+    margin-top: -150px;
+  }
 }
 
 
