--- a/src/styles/Options.css
+++ b/src/styles/Options.css
@@ -1,5 +1,4 @@
 .overlay {
-  /* Height & width depends on how you want to reveal the overlay (see JS below) */
   height: 100%;
   width: 0;
   position: fixed;
@@ -9,25 +8,17 @@
   left: 0;
   top: 0;
   background-color: black;
-  /* Black fallback color */
   background-color: rgba(0, 0, 0, 0.9);
-  /* Black w/opacity */
   overflow-x: hidden;
-  /* Disable horizontal scroll */
-  transition: 0.5s;
-  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */ }
+  transition: 0.5s; }
 
 /* Position the content inside the overlay */
 .overlay-content {
   position: relative;
   top: 25%;
-  /* 25% from the top */
   width: 100%;
-  /* 100% width */
   text-align: center;
-  /* Centered text/links */
-  margin-top: 30px;
-  /* 30px top margin to avoid conflict with the close button on smaller screens */ }
+  margin-top: 30px; }
 
 /* The navigation links inside the overlay */
 .overlay a {
@@ -75,6 +66,32 @@
 .option-div {
   display: inline-block;
   float: left; }
+  @media screen and (max-width: 500px) {
+    .option-div {
+      margin-left: 5px; } }
 
 #gear-icon {
   width: 30px; }
+
+.open {
+  width: 20%; }
+  @media screen and (max-width: 500px) {
+    .open {
+      width: 50%; } }
+  @media screen and (min-width: 501px) and (max-width: 800px) {
+    .open {
+      width: 30%;
+      font-size: 12pt; } }
+
+.close {
+  width: 0%; }
+
+@media screen and (max-width: 500px) {
+  input {
+    width: 30px;
+    font-size: 12pt;
+    height: 42px; } }
+
+@media screen and (max-width: 500px) {
+  .option-label {
+    font-size: 12pt; } }
