--- a/src/styles/Options.scss
+++ b/src/styles/Options.scss
@@ -84,12 +84,18 @@ $small-font: 12pt;
 
 .open {
     width: 20%;
-    @media screen and (max-width: 500px) {
-      width: 50%;
+    padding-right: 10px;
+    @media screen and (max-width: 1100px) {
+      width: 30%;
     }
 
     @media screen and (min-width: 501px) and (max-width: 800px) {
-      width: 30%;
+      width: 40%;
+      font-size: $small-font;
+    }
+
+    @media screen and (max-width: 500px) {
+      width: 100%;
       font-size: $small-font;
     }
 }
