--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,8 +17,7 @@ body {
 
 .App {
   padding-top: 30vh;
-  text-align: center;
-  height: 100vh; }
+  text-align: center; }
 
 .App-start {
   margin-top: 30vh;
@@ -43,27 +42,37 @@ body {
       margin-top: -10%; } }
 
 .primary-btn {
-  color: #93DFB8; }
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate; }
   .primary-btn:hover {
     cursor: pointer;
     text-decoration: underline; }
 
-.orange-btn {
-  color: orange; }
-  .orange-btn:hover {
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #908ab9, 0 0 40px #908ab9, 0 0 50px #908ab9, 0 0 60px #908ab9, 0 0 70px #908ab9; }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6; } }
+
+.pause-btn {
+  color: #FF756D; }
+  .pause-btn:hover {
     cursor: pointer;
     text-decoration: underline; }
 
-.red-btn {
-  color: #FF355E; }
-  .red-btn:hover {
+.reset-btn {
+  color: #F9FFCB; }
+  .reset-btn:hover {
     cursor: pointer;
     text-decoration: underline; }
 
-.gray-btn {
+.restart-btn {
   background: none;
-  color: white; }
-  .gray-btn:hover {
+  color: #FFCED0; }
+  .restart-btn:hover {
     cursor: pointer;
     text-decoration: underline; }
 
@@ -163,7 +172,7 @@ li {
   top: 50%;
   display: block;
   background: transparent;
-  border: 3px solid #17f6fb;
+  border: 3px solid #ffe1d5;
   border-left-color: transparent;
   border-right-color: transparent;
   border-radius: 500px;
@@ -192,7 +201,7 @@ li:nth-child(2) {
   height: 370px;
   border-width: 1px;
   border-style: solid;
-  box-shadow: 0px 0px 20px rgba(23, 246, 251, 0.5);
+  box-shadow: 0px 0px 20px rgba(217, 185, 218, 0.5);
   animation: spinBG2 2s infinite linear; }
   @media screen and (max-width: 500px) {
     li:nth-child(2) {
@@ -208,7 +217,7 @@ li:nth-child(3) {
   width: 396px;
   height: 396px;
   border-width: 2px;
-  box-shadow: inset 0px 0px 25px rgba(23, 246, 251, 0.25);
+  box-shadow: inset 0px 0px 25px rgba(217, 185, 218, 0.5);
   animation: spinBG 12s infinite linear; }
   @media screen and (max-width: 500px) {
     li:nth-child(3) {
@@ -283,3 +292,27 @@ li:nth-child(4) {
   margin-top: -200px;
   font-size: 70px;
   margin-top: -100px; }
+
+#clock-background {
+  background: url(sunset-bg.png);
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.footer-link {
+  color: #ffe1d5; }
+
+#footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+  margin-bottom: 10px; }
