--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,7 +29,6 @@ body {
 .App {
   padding-top: 30vh;
   text-align: center;
-  height: 100vh;
 }
 
 .App-start {
@@ -60,15 +59,28 @@ body {
 }
 
 .primary-btn {
-  color: #93DFB8;
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
   &:hover {
     cursor: pointer;
     text-decoration: underline;
   }
 }
 
-.orange-btn {
-  color: orange;
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #908ab9, 0 0 40px #908ab9, 0 0 50px #908ab9, 0 0 60px #908ab9, 0 0 70px #908ab9;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+
+.pause-btn {
+  color: #FF756D;
   &:hover {
     
     cursor: pointer;
@@ -76,18 +88,18 @@ body {
   }
 }
 
-.red-btn {
-  color: #FF355E;
+.reset-btn {
+  color: #F9FFCB;
   &:hover {
     cursor: pointer;
     text-decoration: underline;
   }
 }
 
-.gray-btn {
+.restart-btn {
   background: none;
 
-  color: white;
+  color: #FFCED0;
   &:hover {
     cursor: pointer;
     text-decoration: underline;
@@ -215,7 +227,7 @@ li{
 	top: 50%;
 	display: block;
 	background: transparent;
-	border: 3px solid rgba(23,246,251, 1.0);
+	border: 3px solid rgb(255,225,213);
 	border-left-color: transparent;
 	border-right-color: transparent;
 	border-radius: 500px;
@@ -247,7 +259,7 @@ li:nth-child(2){
 	height: 370px;
 	border-width: 1px;
 	border-style: solid;
-	box-shadow: 0px 0px 20px rgba(23,246,251, .5);
+	box-shadow: 0px 0px 20px rgba(217,185,218, 0.5);
   animation: spinBG2 2s infinite linear;
   @media screen and (max-width: 500px) {
     width: 270px;
@@ -264,7 +276,7 @@ li:nth-child(3){
 	width: 396px;
 	height: 396px;
 	border-width: 2px;
-	box-shadow: inset 0px 0px 25px rgba(23,246,251, .25);
+	box-shadow: inset 0px 0px 25px rgba(217,185,218, 0.5);
   animation: spinBG 12s infinite linear;
   @media screen and (max-width: 500px) {
     width: 305px;
@@ -349,4 +361,32 @@ li:nth-child(4){
   margin-top: -200px;
   font-size: 70px;
   margin-top: -100px;
+}
+
+#clock-background {
+  background: url(sunset-bg.png);
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.footer-link {
+  color: rgb(255,225,213);
+
+}
+
+#footer  {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+  margin-bottom: 10px;
 }
