--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -58,45 +58,6 @@ body {
   }
 }
 
-.primary-btn {
-  color: #fff;
-  text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
-  &:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
-#pause-btn {
-  color: #FF756D;
-  &:hover {
-    
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
-#reset-btn {
-  color: #F9FFCB;
-  &:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
-#restart-btn {
-  background: none;
-
-  color: #FFCED0;
-  &:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
 #handleOpenNav {
   margin-top: 20px;
   font-size: 17px;
@@ -112,10 +73,6 @@ body, html{
   padding:0;
 }
 
-#background {
-  background: url('lake.jpg');
-  background-repeat: no-repeat;
-}
 #modal{
   width: 100px;
   height: 100px;
@@ -201,87 +158,6 @@ html{
   justify-content: center;
 }
 
-ul{
-  pointer-events: none;
-}
-
-li{
-	position: absolute;
-	display: block;
-	background: transparent;
-	border: 3px solid rgb(255,225,213);
-	border-left-color: transparent;
-	border-right-color: transparent;
-	border-radius: 500px;
-  transition: all 0.5s ease;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  
-}
-
-li:first-child{
-	margin-top: -130px;
-	z-index: 2;
-	width: 340px;
-	height: 340px;
-	border-width: 5px;
-  animation: spinBG 5s infinite linear;
-  @media screen and (max-width: 500px) {
-    width: 220px;
-    height: 220px;
-    margin-top: -100px;
-  }
-}
-
-li:nth-child(2){
-	margin-top: -137px;
-	z-index: 1;
-	width: 370px;
-	height: 370px;
-	border-width: 1px;
-	border-style: solid;
-	box-shadow: 0px 0px 20px rgba(217,185,218, 0.5);
-  animation: spinBG2 2s infinite linear;
-  @media screen and (max-width: 500px) {
-    width: 270px;
-    height: 270px;
-    margin-top: -120px;
-  }
-}
-
-li:nth-child(3){
-	margin-top: -150px;
-	z-index: 1;
-	width: 396px;
-	height: 396px;
-	border-width: 2px;
-	box-shadow: inset 0px 0px 25px rgba(217,185,218, 0.5);
-  animation: spinBG 12s infinite linear;
-  @media screen and (max-width: 500px) {
-    width: 305px;
-    height: 305px;
-    margin-top: -140px;
-  }
-}
-
-li:nth-child(4){
-	margin-top: -170px;
-	z-index: 1;
-	width: 430px;
-	height: 430px;
-	border-width: 5px;
-	border-style: solid;
-	box-shadow: inset 0px 0px 25px rgba(23,246,251,1.0);
-  animation: spinBG3 8s infinite linear;
-  @media screen and (max-width: 500px) {
-    width: 325px;
-    height: 325px;
-    margin-top: -150px;
-  }
-}
-
 #break-countdown {
   margin-top: -200px;
   font-size: 70px;
@@ -289,7 +165,7 @@ li:nth-child(4){
 }
 
 #clock-background {
-  background: url(sunset-bg.png);
+  background: url(../assets/img/sunset-bg.png);
   opacity: 0.8;
   top: 0;
   left: 0;
@@ -318,51 +194,6 @@ li:nth-child(4){
 /*-------------------------------------------
  Animations
 -------------------------------------------*/
-@keyframes pulseGlow{
-	0%  {text-shadow: 0px 0px 20px rgba(23,246,251, 0.75);}
-	50% {text-shadow: 0px 0px 40px rgba(23,246,251, 0.5); }
-	100%{text-shadow: 0px 0px 20px rgba(23,246,251, 0.75);}		
-}
-
-@keyframes pulseShadow{
-	0%  {box-shadow: 0px 0px 30px rgba(23,246,251, 0.25);}
-	50% {box-shadow: 0px 0px 30px rgba(23,246,251, 0.75);}
-	100%{box-shadow: 0px 0px 30px rgba(23,246,251, 0.25);}		
-}
-
-@keyframes spinBG{
-	0%  {transform: rotate(0deg);}
-	100%{transform: rotate(360deg);}	
-}
-
-@keyframes spinBG2{
-	0%{
-		transform: rotate(360deg);
-		box-shadow: 0px 0px 1px rgba(23,246,251, 0.5);
-	}
-	50%{
-		transform: rotate(180deg);
-		box-shadow: 0px 0px 20px rgba(23,246,251, 0.5);
-	}
-	100%{
-		transform: rotate(0deg);
-		box-shadow: 0px 0px 1px rgba(23,246,251, 0.5);
-	}	
-}
-
-@keyframes spinBG3{
-	0%{
-		transform: rotate(180deg);
-		box-shadow: 0px 0px 1px rgba(23,246,251, 0.1);
-	}
-	50%{
-		transform: rotate(0deg);
-	}
-	100%{
-		transform: rotate(-180deg);
-	}	
-}
-
 @keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #908ab9, 0 0 40px #908ab9, 0 0 50px #908ab9, 0 0 60px #908ab9, 0 0 70px #908ab9;
