--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -41,22 +41,17 @@ body {
       font-size: 12pt;
       margin-top: -10%; } }
 
-#handleOpenNav {
+#settings-btn {
   margin-top: 20px;
   font-size: 17px;
   font-weight: bold; }
-  #handleOpenNav:hover {
+  #settings-btn:hover {
     cursor: pointer;
     color: #3493ce; }
 
 body, html {
   margin: 0;
   padding: 0; }
-
-#modal {
-  width: 100px;
-  height: 100px;
-  border: 1px; }
 
 .time {
   font-size: 70px;
@@ -71,32 +66,6 @@ body, html {
 
 #OptionsModal {
   margin-left: 20%; }
-
-input {
-  height: 50px;
-  float: left;
-  margin-top: 40px;
-  font-size: 30px;
-  margin-left: 5px;
-  border-bottom: 1px solid white;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  width: 60px;
-  padding-bottom: 0px;
-  text-align: center;
-  background: none;
-  color: white; }
-
-.dot-separator {
-  background: none;
-  border: none;
-  width: 5px;
-  font-weight: 800; }
-
-input:focus {
-  outline-width: 0;
-  caret-color: white; }
 
 .fa-gear {
   margin-right: 5px; }
