--- a/src/styles/Site.css
+++ b/src/styles/Site.css
@@ -1,3 +1,4 @@
+@import url(~font-awesome/css/font-awesome.min.css);
 .gradient-background, html {
   background: #141E30;
   /* fallback for old browsers */
@@ -41,22 +42,17 @@ body {
       font-size: 12pt;
       margin-top: -10%; } }
 
-#handleOpenNav {
+#settings-btn {
   margin-top: 20px;
   font-size: 17px;
   font-weight: bold; }
-  #handleOpenNav:hover {
+  #settings-btn:hover {
     cursor: pointer;
     color: #3493ce; }
 
 body, html {
   margin: 0;
   padding: 0; }
-
-#modal {
-  width: 100px;
-  height: 100px;
-  border: 1px; }
 
 .time {
   font-size: 70px;
@@ -71,32 +67,6 @@ body, html {
 
 #OptionsModal {
   margin-left: 20%; }
-
-input {
-  height: 50px;
-  float: left;
-  margin-top: 40px;
-  font-size: 30px;
-  margin-left: 5px;
-  border-bottom: 1px solid white;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  width: 60px;
-  padding-bottom: 0px;
-  text-align: center;
-  background: none;
-  color: white; }
-
-.dot-separator {
-  background: none;
-  border: none;
-  width: 5px;
-  font-weight: 800; }
-
-input:focus {
-  outline-width: 0;
-  caret-color: white; }
 
 .fa-gear {
   margin-right: 5px; }
@@ -370,9 +340,26 @@ li:nth-child(5) {
     top: 15px;
     right: 35px; } }
 
-@media screen and (max-height: 1050px) {
-  .input-time {
-    float: left; } }
+input {
+  height: 50px;
+  float: left;
+  margin-top: 40px;
+  font-size: 25px;
+  margin-left: 5px;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  width: 60px;
+  padding-bottom: 0px;
+  text-align: center;
+  background: none;
+  color: white; }
+  input:focus {
+    outline-width: 0;
+    caret-color: white; }
+  @media screen and (max-height: 1050px) {
+    input .input-time {
+      float: left; } }
 
 .option-label {
   color: white;
@@ -383,7 +370,6 @@ li:nth-child(5) {
   margin-left: 20px; }
 
 .option-div {
-  display: inline-block;
   float: left; }
   @media screen and (max-width: 500px) {
     .option-div {
@@ -419,3 +405,11 @@ li:nth-child(5) {
 @media screen and (max-width: 500px) {
   .option-label {
     font-size: 12pt; } }
+
+.dot-separator {
+  float: left;
+  margin-top: 50px;
+  font-size: 30px;
+  border-left: none;
+  border-right: none;
+  border-top: none; }
