--- a/src/styles/_ClockOptions.scss
+++ b/src/styles/_ClockOptions.scss
@@ -1,58 +1,78 @@
 $small-font: 12pt;
 
 .overlay {
-    height: 100%;
-    width: 0;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0, 0.9); 
-    overflow-x: hidden;
-    transition: 0.5s; 
-  }
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0, 0.9); 
+  overflow-x: hidden;
+  transition: 0.5s; 
+}
   
-  /* Position the content inside the overlay */
-  .overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center; 
-    margin-top: 30px; 
-  }
-  
-  /* The navigation links inside the overlay */
-  .overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block; /* Display block instead of inline */
-    transition: 0.3s; /* Transition effects on hover (color) */
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-  }
-  
-  /* Position the close button (top right corner) */
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center; 
+  margin-top: 30px; 
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
   .overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
   }
-  
-  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
-  @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
-    .overlay .closebtn {
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-    }
+}
+
+input {
+  height: 50px;
+  float: left;
+  margin-top: 40px;
+  font-size: 25px;
+  margin-left: 5px;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  width: 60px;
+  padding-bottom: 0px;
+  text-align: center;
+  background: none;
+  color: white;
+
+  &:focus {
+    outline-width: 0;
+    caret-color: white;
   }
 
   @media screen and (max-height: 1050px) {
@@ -60,27 +80,27 @@ $small-font: 12pt;
       float: left;
     }
   }
-  
-  .option-label {
-    color: white;
-    float: left;
-    margin-top: 70px;
-    font-size: 25px;
-    margin-right: 10px;
-    margin-left: 20px;
-  }
-  
-  .option-div {
-    display: inline-block;
-    float: left;
-    @media screen and (max-width: 500px) {
-      margin-left: 5px;
-    }
-  }
+}
 
-  #gear-icon {
-    width: 30px;
+.option-label {
+  color: white;
+  float: left;
+  margin-top: 70px;
+  font-size: 25px;
+  margin-right: 10px;
+  margin-left: 20px;
+}
+
+.option-div {
+  float: left;
+  @media screen and (max-width: 500px) {
+    margin-left: 5px;
   }
+}
+
+#gear-icon {
+  width: 30px;
+}
 
 .open {
     width: 20%;
@@ -116,4 +136,13 @@ input {
   @media screen and (max-width: 500px) {
     font-size: $small-font;
   }
+}
+
+.dot-separator {
+  float: left;
+  margin-top: 50px;
+  font-size: 30px;
+  border-left: none;
+  border-right: none;
+  border-top: none;
 }
