--- a/src/styles/Site.scss
+++ b/src/styles/Site.scss
@@ -1,5 +1,5 @@
 @import '~font-awesome/css/font-awesome.min.css';
-@import 'App.scss';
+@import '_App.scss';
 @import '_Spinner.scss';
 @import '_TimerOptions.scss';
 @import '_ClockOptions.scss';
